--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="Refresh" content="1; url=work/product/goMain.do"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ESHOP 쇼핑몰 프로그램</title>
+<title>JEWELL</title>
 </head>
 <body>
 
