--- a/main_publish/html/main.html
+++ b/main_publish/html/main.html
@@ -16,10 +16,53 @@
     <link rel="stylesheet" href="../css/owl.carousel.min.css">
     <script src="../js/owl.carousel.min.js"></script>
 
+    <!-- popup -->
+    <script src="../js/jquery.cookie.js"></script>
+    <script>
+        $(function () {
+           //쿠키("popup")의 값이 'none'이면 id 값이 인 요소를 숨김니다.
+           if ($.cookie('popup') == 'none') {
+              $('#modal').hide();
+           }
+           var $expireChk = $('#expireChk');
+           $('.closeBtn').on('click', closePop);
+           function closePop() {
+              if ($expireChk.is(':checked')) {
+                 $.cookie('popup', 'none', {expires: 3, path: '/'});
+              }
+              $('#modal').fadeOut('fast');
+           }
+        });
+    </script>
+
     <title>JEWELL</title>
 </head>
 <body>
     <!-- 팝업 -->
+    <div id="modal">
+        <div class="modal_up">
+            <div class="uptitle">
+               JEWELL 설날 연휴영업 안내
+            </div>
+            <div class="upbody">
+               2023년 설 연휴 기간 영업 일정을 안내해드립니다. <br><br>
+
+               - 연휴 기간 영업 일정 -<br>
+               1월 20일 (금) - 정상 운영<br>
+               1월 23일,24일 (월,화) - 휴무<br>
+               1월 25일(수) - 정상 운영<br><br>
+               
+               매장 방문 및 이용에 참고 부탁드리며
+               행복하고 <br>즐거운 설 연휴 되시길 바랍니다.<br>
+               감사합니다.
+            </div>
+            <p class="closewrap">
+                <input type="checkbox" name="expireChk" id="expireChk" />
+                <label for="expireChk">3일동안 이 창 열지 않기</label>
+                <button class="closeBtn">닫기</button>
+            </p>
+        </div>
+    </div>
 
 
     <!-- 배너 -->
