--- a/main_publish/html/main.html
+++ b/main_publish/html/main.html
@@ -42,19 +42,28 @@
     <div id="modal">
         <div class="modal_up">
             <div class="uptitle">
-               JEWELL 설날 연휴영업 안내
+               <span class="pop_title">
+                   JEWELL 설날 연휴영업 안내
+               </span>
             </div>
             <div class="upbody">
-               2023년 설 연휴 기간 영업 일정을 안내해드립니다. <br><br>
+               <span class="pop_announce">
+                    2023년 설 연휴 기간 영업 일정을 안내해드립니다. <br><br><br>
+               </span> 
 
-               - 연휴 기간 영업 일정 -<br>
+               <span class="pop_day_title">                
+                    - 연휴 기간 영업 일정 - <br>
+               </span>
                1월 20일 (금) - 정상 운영<br>
                1월 23일,24일 (월,화) - 휴무<br>
                1월 25일(수) - 정상 운영<br><br>
                
-               매장 방문 및 이용에 참고 부탁드리며
-               행복하고 <br>즐거운 설 연휴 되시길 바랍니다.<br>
-               감사합니다.
+
+               <span class="pop_announce">               
+                    매장 방문 및 이용에 참고 부탁드리며,<br>
+                    행복하고 즐거운 설 연휴 되시길 바랍니다.<br>
+                    감사합니다.
+               </span>
             </div>
             <p class="closewrap">
                 <input type="checkbox" name="expireChk" id="expireChk" />
