--- a/main_publish/html/main.html
+++ b/main_publish/html/main.html
@@ -78,10 +78,10 @@
     <div class="con">
         <div class="banner">
             <div class="owl-carousel">
-                <div class="banner_img"> <img src="../images/ban01.jpg" alt="#"> </div>
-                <div class="banner_img"> <img src="../images/ban02.jpg" alt="#"> </div>
-                <div class="banner_img"> <img src="../images/ban03.jpg" alt="#"> </div>
-                <div class="banner_img"> <img src="../images/ban04.jpg" alt="#"> </div>
+                <div class="banner_img"> <img src="../images/banner_01.png" alt="#"> </div>
+                <div class="banner_img"> <img src="../images/banner_02.png" alt="#"> </div>
+                <div class="banner_img"> <img src="../images/banner_03.png" alt="#"> </div>
+                <div class="banner_img"> <img src="../images/banner_04.png" alt="#"> </div>
                 <!-- 이미지 배너 사이즈 맞게 수정 예정 -->
             </div>
 
