--- a/main_publish/html/main.html
+++ b/main_publish/html/main.html
@@ -78,10 +78,10 @@
     <div class="con">
         <div class="banner">
             <div class="owl-carousel">
-                <div class="banner_img"> <img src="../images/banner_01.png" alt="#"> </div>
-                <div class="banner_img"> <img src="../images/banner_02.png" alt="#"> </div>
-                <div class="banner_img"> <img src="../images/banner_03.png" alt="#"> </div>
-                <div class="banner_img"> <img src="../images/banner_04.png" alt="#"> </div>
+                <div class="banner_img"> <img src="../css/images/banner_01.png" alt="#"> </div>
+                <div class="banner_img"> <img src="../css/images/banner_02.png" alt="#"> </div>
+                <div class="banner_img"> <img src="../css/images/banner_03.png" alt="#"> </div>
+                <div class="banner_img"> <img src="../css/images/banner_04.png" alt="#"> </div>
                 <!-- 이미지 배너 사이즈 맞게 수정 예정 -->
             </div>
 
@@ -104,39 +104,39 @@
         <div class="content">
             <div class="best_group">
                 <div class="group_name">
-                    <p class="h3">BEST</p>
+                    <p class="con_name">BEST</p>
                 </div>
 
                 <div class="inner_group">
                     <div class="item1">
-                        <div class="img"><a href="#"><img src="../images/01.jpg" alt="#"></a></div>
-                        <div class="item_name">
-                            <a href="#"><p class="h4">제품명을 작성하세요</p></a>
-                            <p class="h5">설명을 작성하세요</p>
+                        <div class="img"><a href="#"><img src="../css/images/01.jpg" alt="#"></a></div>
+                        <div class="item">
+                            <a href="#"><p class="item_name">제품명을 작성하세요</p></a>
+                            <p class="item_ann">설명을 작성하세요</p>
                         </div>
                     </div>
 
                     <div class="item2">
-                        <div class="img"><a href="#"><img src="../images/01.jpg" alt="#"></a></div>
-                        <div class="item_name">
-                            <a href="#"><p class="h4">제품명을 작성하세요</p></a>
-                            <p class="h5">설명을 작성하세요</p>
+                        <div class="img"><a href="#"><img src="../css/images/01.jpg" alt="#"></a></div>
+                        <div class="item">
+                            <a href="#"><p class="item_name">제품명을 작성하세요</p></a>
+                            <p class="item_ann">설명을 작성하세요</p>
                         </div>
                     </div>
 
                     <div class="item3">
-                        <div class="img"><a href="#"><img src="../images/01.jpg" alt="#"></a></div>
-                        <div class="item_name">
-                            <a href="#"><p class="h4">제품명을 작성하세요</p></a>
-                            <p class="h5">설명을 작성하세요</p>
+                        <div class="img"><a href="#"><img src="../css/images/01.jpg" alt="#"></a></div>
+                        <div class="item">
+                            <a href="#"><p class="item_name">제품명을 작성하세요</p></a>
+                            <p class="item_ann">설명을 작성하세요</p>
                         </div>
                     </div>
 
                     <div class="item4">
-                        <div class="img"><a href="#"><img src="../images/01.jpg" alt="#"></a></div>
-                        <div class="item_name">
-                            <a href="#"><p class="h4">제품명을 작성하세요</p></a>
-                            <p class="h5">설명을 작성하세요</p>
+                        <div class="img"><a href="#"><img src="../css/images/01.jpg" alt="#"></a></div>
+                        <div class="item">
+                            <a href="#"><p class="item_name">제품명을 작성하세요</p></a>
+                            <p class="item_ann">설명을 작성하세요</p>
                         </div>
                     </div>
                 </div>                
@@ -147,39 +147,39 @@
             <!-- 콘텐츠-관심있는 제품 -->
             <div class="best_group">
                 <div class="group_name">
-                    <p class="h3">관심있는 상품</p>
+                    <p class="con_name">관심있는 상품</p>
                 </div>
 
                 <div class="inner_group">
                     <div class="item1">
-                        <div class="img"><a href="#"><img src="../images/01.jpg" alt="#"></a></div>
+                        <div class="img"><a href="#"><img src="../css/images/01.jpg" alt="#"></a></div>
                         <div class="item_name">
-                            <a href="#"><p class="h4">제품명을 작성하세요</p></a>
-                            <p class="h5">설명을 작성하세요</p>
+                            <a href="#"><p class="item_name">제품명을 작성하세요</p></a>
+                            <p class="item_ann">설명을 작성하세요</p>
                         </div>
                     </div>
 
                     <div class="item2">
-                        <div class="img"><a href="#"><img src="../images/01.jpg" alt="#"></a></div>
+                        <div class="img"><a href="#"><img src="../css/images/01.jpg" alt="#"></a></div>
                         <div class="item_name">
-                            <a href="#"><p class="h4">제품명을 작성하세요</p></a>
-                            <p class="h5">설명을 작성하세요</p>
+                            <a href="#"><p class="item_name">제품명을 작성하세요</p></a>
+                            <p class="item_ann">설명을 작성하세요</p>
                         </div>
                     </div>
 
                     <div class="item3">
-                        <div class="img"><a href="#"><img src="../images/01.jpg" alt="#"></a></div>
+                        <div class="img"><a href="#"><img src="../css/images/01.jpg" alt="#"></a></div>
                         <div class="item_name">
-                            <a href="#"><p class="h4">제품명을 작성하세요</p></a>
-                            <p class="h5">설명을 작성하세요</p>
+                            <a href="#"><p class="item_name">제품명을 작성하세요</p></a>
+                            <p class="item_ann">설명을 작성하세요</p>
                         </div>
                     </div>
 
                     <div class="item4">
-                        <div class="img"><a href="#"><img src="../images/01.jpg" alt="#"></a></div>
+                        <div class="img"><a href="#"><img src="../css/images/01.jpg" alt="#"></a></div>
                         <div class="item_name">
-                            <a href="#"><p class="h4">제품명을 작성하세요</p></a>
-                            <p class="h5">설명을 작성하세요</p>
+                            <a href="#"><p class="item_name">제품명을 작성하세요</p></a>
+                            <p class="item_ann">설명을 작성하세요</p>
                         </div>
                     </div>
                 </div>               
